reconcile/deployFalcon/code/app/tomcat/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "webapp-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/conditions.webapp: >
      [{"field":"http-request-method","httpRequestMethodConfig":{"Values":["GET", "PUT"]}}]
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/wafv2-acl-arn: WAFRULEARN
    alb.ingress.kubernetes.io/inbound-cidrs: KALIPUBLICIP
  labels:
    app: webapp
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "webapp"
                port:
                  number: 80
